Use comparison with localized string

BUG:312414